--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="msapplication-tap-highlight" content="no">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title></title>
-    <link rel="stylesheet" type="text/css" href="css/index.css">
+    <link rel="stylesheet" type="text/css" href="css/index.css" />
 </head>
 
 <body>
@@ -56,6 +56,13 @@
                 <div id="strategy" class="coocaabtn rightBtn">万元现金攻略</div>
             </div>
         </div>
+        <div id="moreChance">
+            <div class="moviePkg coocaabtn2"></div>
+            <div class="mallPkg  coocaabtn2"></div>
+        </div>
+        <div id="strategyPage" class="coocaabtn3">
+
+        </div>
     </div>
     <script type="text/javascript" src="js/jquery-1.8.3.min.js"></script>
     <script type="text/javascript" src="js/data.js"></script>
@@ -66,7 +73,8 @@
     <script type="text/javascript" src="js/coocaamap-1.1.js"></script>
     <script type="text/javascript">
     window.onload = function() {
-        showPage()
+//        setTimeout('$("#strategyPage").attr("class","cbg show")',2000)
+//        showPage();
     }
     </script>
 </body>
