--- a/powerStation.html
+++ b/powerStation.html
@@ -12,10 +12,35 @@
 </head>
 <body>
 <div id="deviceready">
+    <div id="leftbox">
+        <div id="toptitle"></div>
+        <div id="cityImg"><img></div>
+        <div id="wordtitle"></div>
+        <div id="cityword"></div>
+        <div id="citybtn" class="coocaabtn"></div>
+    </div>
+    <div id="moviebox">
+        <div class="coocaabtn pkg"><img></div>
+        <div class="coocaabtn pkg"><img></div>
+        <div class="coocaabtn pkg"><img></div>
+        <div class="coocaabtn pkg"><img></div>
+        <div class="coocaabtn pkg"><img></div>
+        <div class="coocaabtn pkg"><img></div>
+    </div>
+    <div id="mallbox">
+        <div class="coocaabtn shop"><img></div>
+        <div class="coocaabtn shop"><img></div>
+        <div class="coocaabtn shop"><img></div>
+        <div class="coocaabtn shop"><img></div>
+        <div class="coocaabtn shop"><img></div>
+        <div class="coocaabtn shop"><img></div>
+    </div>
+    <div id="goindex" class="coocaabtn"></div>
 </div>
 <script type="text/javascript" src="js/jquery-1.8.3.min.js"></script>
 <script type="text/javascript" src="cordova.js"></script>
 <script type="text/javascript" src="js/power.js"></script>
+<script type="text/javascript" src="js/data.js"></script>
 <script type="text/javascript" src="js/assist.js"></script>
 <script type="text/javascript" src="js/adjust.js"></script>
 <script type="text/javascript" src="js/coocaamap-1.1.js"></script>
