--- a/powerStation.html
+++ b/powerStation.html
@@ -37,6 +37,10 @@
     </div>
     <div id="goindex" class="coocaabtn"></div>
 </div>
+<div id="errortoast">
+    <img src="http://sky.fs.skysrt.com/statics/webvip/webapp/national/mainMap/errortoast.png">
+</div>
+<div id="blackbg"></div>
 <script type="text/javascript" src="js/jquery-1.8.3.min.js"></script>
 <script type="text/javascript" src="cordova.js"></script>
 <script type="text/javascript" src="js/power.js"></script>
